--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<div
+  class="container d-flex flex-column align-items-center justify-content-center min-vh-100"
+>
+  <h1>
+    <span class="color-blue">Search</span>
+    <span class="color-purple"> d_evs</span>
+  </h1>
+  <div class="d-flex justify-content-between w-100">
+    <svg
+      style="position: absolute; margin-left: 18px; margin-top: 14px;"
+
+      width="21"
+      height="21"
+      viewBox="0 0 21 21"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M16.031 14.617L20.314 18.899L18.899 20.314L14.617 16.031C13.0237 17.3082 11.042 18.0029 9 18C4.032 18 0 13.968 0 9C0 4.032 4.032 0 9 0C13.968 0 18 4.032 18 9C18.0029 11.042 17.3082 13.0237 16.031 14.617ZM14.025 13.875C15.2941 12.5699 16.0029 10.8204 16 9C16 5.132 12.867 2 9 2C5.132 2 2 5.132 2 9C2 12.867 5.132 16 9 16C10.8204 16.0029 12.5699 15.2941 13.875 14.025L14.025 13.875Z"
+        fill="#A0AEC0"
+      />
+    </svg>
+
+    <input type="text" class="d-block" placeholder="Search"/>
+    <button class="background-purple color-white">Search</button>
+  </div>
+</div>
