--- a/src/app/components/person-card/person-card.component.scss
+++ b/src/app/components/person-card/person-card.component.scss
@@ -1,7 +1,7 @@
 .container {
     width: 248px;
     min-width: max-content;
-    max-width: 100%;
+    max-width: 400px;
 }
 
 .avatar {
@@ -30,4 +30,10 @@ span.login {
     font-size: 16px;
     color: #4A5568;
     max-width: 248px;
+    margin-top: 16px;
+    margin-bottom: 24px;
+}
+
+.info-followers{
+    margin-bottom: 24px;
 }
