feat: Feito metodos e componentes necessários para carregar os repositórios

--- a/src/app/components/repositories/repositories.component.html
+++ b/src/app/components/repositories/repositories.component.html
@@ -1,1 +1,10 @@
-<p>repositories works!</p>
+<div>
+  <div *ngFor="let repository of repositoriesData$">
+  <app-repository
+  [name]="repository.name"
+  [description]="repository.description"
+  [stargazers_count]="repository.stargazers_count"
+  [url]="repository.url"
+  ></app-repository>
+  </div>
+</div>
