fix: corrigida url de linkagem dos repositórios

--- a/src/app/components/repositories/repositories.component.html
+++ b/src/app/components/repositories/repositories.component.html
@@ -4,7 +4,7 @@
   [name]="repository.name"
   [description]="repository.description"
   [stargazers_count]="repository.stargazers_count"
-  [url]="repository.url"
+  [url]="repository.html_url"
   ></app-repository>
   </div>
 </div>
