feat: ajustes básicos de layout e fonte

--- a/src/app/components/button-action/button-action.component.html
+++ b/src/app/components/button-action/button-action.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="conditionn !== ''">
+<div *ngIf="argument !== '' && argument !== null">
   <a [href]="src"
     ><button>
       {{ text }}
