--- a/src/app/components/person-card/person-card.component.html
+++ b/src/app/components/person-card/person-card.component.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="contact mt-5">
-    <app-button-action [src]="website" [conditionn]="website" text="Visitar Site"></app-button-action>
-    <app-button-action [src]="twitterUrl()" [conditionn]="twitter_username" text="Visitar Twitter"></app-button-action>
+    <app-button-action [src]="website" [argument]="website" text="Visitar Site"></app-button-action>
+    <app-button-action [src]="twitterUrl()" [argument]="twitter_username" text="Visitar Twitter"></app-button-action>
   </div>
 </div>
