--- a/src/app/components/repository/repository.component.scss
+++ b/src/app/components/repository/repository.component.scss
@@ -1,13 +1,16 @@
+* {
+  font-family: Inter, sans-serif;
+}
+
 div {
   border-bottom: 1px solid #E2E8F0
 }
 
 h2 {
-  font-family: Inter, sans-serif;
   font-weight: 700;
   font-size: 24px;
   color: #171923;
-  margin-bottom: 16px;
+  margin: 24px 0 16px 0;
 }
 
 a {
@@ -17,4 +20,5 @@ a {
 p {
   margin-bottom: 16px;
   color: #4A5568;
+  font-size: 16px
 }
